log/2022-03-18T20:12:15+08:00.log
Manual Autotest: Begin at 2022年 03月 18日 星期五 20:12:15 CST
/usr/src/workdir/input_testcase1.c: In function 'main':
/usr/src/workdir/input_testcase1.c:4:12: error: expected expression before ')' token
    4 |         if()
      |            ^
[32m[ You have passed testcase 1/10. ][0m
/usr/src/workdir/input_testcase2.c: In function 'main':
/usr/src/workdir/input_testcase2.c:9:25: error: expected expression before '{' token
    9 |                         {}
      |                         ^
/usr/src/workdir/input_testcase2.c:10:1: error: expected expression before '}' token
   10 | }
      | ^
[32m[ You have passed testcase 2/10. ][0m
/usr/src/workdir/input_testcase3.c: In function 'main':
/usr/src/workdir/input_testcase3.c:9:17: warning: format '%d' expects argument of type 'int *', but argument 2 has type 'int' [-Wformat=]
    9 |         scanf("%d",z);
      |                ~^  ~
      |                 |  |
      |                 |  int
      |                 int *
/usr/src/workdir/input_testcase3.c:10:23: error: expected ')' before ';' token
   10 |         printf("%d",&x;
      |                       ^
      |                       )
/usr/src/workdir/input_testcase3.c:10:18: warning: format '%d' expects argument of type 'int', but argument 2 has type 'int *' [-Wformat=]
   10 |         printf("%d",&x;
      |                 ~^  ~~
      |                  |  |
      |                  |  int *
      |                  int
      |                 %ls
/usr/src/workdir/input_testcase3.c:10:24: error: expected ';' before '}' token
   10 |         printf("%d",&x;
      |                        ^
      |                        ;
   11 | }
      | ~                       
[32m[ You have passed testcase 3/10. ][0m
/usr/src/workdir/input_testcase4.c: In function 'main':
/usr/src/workdir/input_testcase4.c:5:21: error: 'b' undeclared (first use in this function)
    5 |         printf("%d",b);
      |                     ^
/usr/src/workdir/input_testcase4.c:5:21: note: each undeclared identifier is reported only once for each function it appears in
/usr/src/workdir/input_testcase4.c:7:21: warning: format '%d' expects a matching 'int' argument [-Wformat=]
    7 |         printf("%d %d %d",a);
      |                    ~^
      |                     |
      |                     int
/usr/src/workdir/input_testcase4.c:7:24: warning: format '%d' expects a matching 'int' argument [-Wformat=]
    7 |         printf("%d %d %d",a);
      |                       ~^
      |                        |
      |                        int
[32m[ You have passed testcase 4/10. ][0m
[32m[ You have passed testcase 5/10. ][0m
Files /home/git/ostest/target/20376156/lab0-Extra-2022-03-18T20:12:15+08:00-QcFUO/result.txt and /home/git/ostest/target/20376156/lab0-Extra-2022-03-18T20:12:15+08:00-QcFUO/result_ans.txt differ
[31m[01m[ You have not passed testcase 6/10. ][0m
[32m[ You have passed testcase 7/10. ][0m
[32m[ You have passed testcase 8/10. ][0m
/usr/src/workdir/input_testcase9.c: In function 'main':
/usr/src/workdir/input_testcase9.c:6:25: warning: format '%d' expects a matching 'int *' argument [-Wformat=]
    6 |                 scanf("%d");
      |                        ~^
      |                         |
      |                         int *
Files /home/git/ostest/target/20376156/lab0-Extra-2022-03-18T20:12:15+08:00-QcFUO/result.txt and /home/git/ostest/target/20376156/lab0-Extra-2022-03-18T20:12:15+08:00-QcFUO/result_ans.txt differ
[31m[01m[ You have not passed testcase 9/10. ][0m
[32m[ You have passed testcase 10/10. ][0m
[33m[01m[ You got 80 (of 100) this time. 2022年 03月 18日 星期五 20:13:28 CST ][0m
Autotest: End at 2022年 03月 18日 星期五 20:13:28 CST
